colocando-iframe-home

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,3 +31,11 @@ section#telefone{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 471px;
+}
